# appn-project-manager

./: .bumpversion.toml  .dmypy.json  .gitignore  Makefile  README.md  main.py  pyproject.toml
appm/: default.py  manager.py  model.py  utils.py
docs/source/: appm.rst  conf.py  index.rst  modules.rst
examples/: config.yaml  template.yaml  template_appn_default.yaml  template_appn_directory_structure.yaml  template_original.yaml  template_resonate_latest_appn_directory_structure.yaml  template_resonate_latest_appn_directory_structure_optional_tz.yaml  template_resonate_latest_appn_directory_structure_optional_tz_researcher.yaml  template_v1a.yaml  template_v1b.yaml  template_v2a.yaml  template_v3.yaml  template_v4.yaml
project/: metadata.yaml
schema/: yaml_template_schema.json
scripts/: demo.py  export_json_schema.py
src/: __init__.py  file.py  manager.py  model.py
tests/: test_manager.py  test_model.py
tests/fixtures/invalid_templates/: extension_empty.yaml  file_empty.yaml  file_extension_name.yaml  file_extension_no_default_name.yaml  file_first_field_optional.yaml  file_first_field_optional_group.yaml  file_no_default.yaml  group_empty.yaml  layout_mapping.yaml  naming_conv_duplicate.yaml  naming_conv_empty_structure.yaml  naming_conv_invalid_field_structure.yaml
tests/fixtures/valid_templates/: default.yaml  file_missing_component_but_has_default.yaml  file_multi_ext.yaml  file_no_default.yaml  file_no_default_ext.yaml  layout_list.yaml  layout_with_mapping.yaml  naming_perm_year_researcher_org.yaml  naming_perm_year_summary_internal.yaml  (+1 more)
