[project]
name = "appn-project-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.14",
]

[dependency-groups]
analysis = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]
dev = [
    "pytest>=8.4.1",
]
